[package]
name = "githanos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
anyhow = "1"
config = "0.13"
dirs = "4.0"
futures = "0.3"
git2 = "0.15"
kube = { version = "0.76", features = ["derive", "client", "runtime"] }
k8s-openapi = { version = "0.16", features = ["v1_23"] }
parking_lot = "0.12"
reqwest = { version = "0.11", default-features = false }
serde = "1.0"
serde_derive = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream  = { version = "0.1", features = ["fs"] }

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1
overflow-checks  = false
panic            = "unwind"
incremental      = true

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
panic            = "abort"
incremental      = false
strip            = true

[profile.dev.build-override]
opt-level        = 0
debug            = true
debug-assertions = true
codegen-units    = 1
overflow-checks  = true
incremental      = true

[profile.release.build-override]
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
incremental      = false
